# aiesec-reception-tool

./: .dockerignore  .gitignore  Dockerfile  config.yaml  docker-compose-dev.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  trello_cards
.github/workflows/: ci.yml
docs/schemas/: city.json  committee_payment.json  contact_info.json  current_person.json  cv.json  oportunity.json  oportunity_application.json  organisation.json  partner_type.json  person.json  person_profile.json  slot.json
expaql/: api.py  models.py
receptiontool/: __main__.py  config.py  discord_bot.py  trello.py  trello_conn.py
receptiontool/expaql/: api.py  formaters.py  models.py
schemas/: current_person.json  office.json
src/: config.py  main.py  trello_conn.py
src/expaql/: api.py  formaters.py  models.py
